--- a/CSS/index.css
+++ b/CSS/index.css
@@ -94,6 +94,12 @@
   display: flex;
 }
 
+#map {
+  margin-left: 5em;
+  margin-right: 5em;
+  margin-top: -2em;
+}
+
 .footer {
   width: 100%;
   height: 15em;
