--- a/CSS/index.css
+++ b/CSS/index.css
@@ -88,6 +88,10 @@ body {
   text-align: center;
 }
 
+#email, #linkedin, #phone {
+  font-size: 1.5em;
+}
+
 /*responsive*/
 
 @media only screen and (max-width: 610px) {
@@ -105,5 +109,8 @@ body {
 @media only screen and (max-width: 320px) {
   #card1, #card2, #card3, #card4, #card5, #card6 {
     grid-column: 1 / span 10;
+  }
+  #email, #linkedin, #phone {
+    font-size: 3em;
   }
 }
