--- a/CSS/index.css
+++ b/CSS/index.css
@@ -106,4 +106,7 @@ body {
   #card1, #card2, #card3, #card4, #card5, #card6 {
     grid-column: 1 / span 10;
   }
+  #email, #linkedin, #phone {
+    font-size: 1.3em;
+  }
 }
